# book-data-collect-server

./: README.md  pyproject.toml  sample.env  server.py
app/: main.py
app/database/: __init__.py  mongo.py
app/scraper/: __init__.py  naver_book_scraper.py
app/templates/: index.html
