[tool.poetry]
name = "book-data-collect-server"
version = "0.1.0"
description = ""
authors = ["devseunggwan <yanhis97531@gmail.com>"]
readme = "README.md"
packages = [{include = "book_data_collect_server"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
black = "^23.3.0"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
jinja2 = "^3.1.2"
aiofiles = "^23.1.0"
python-dotenv = "^1.0.0"
odmantic = "^0.9.2"
asyncio = "^3.4.3"
pymongo = {extras = ["srv"], version = "^4.4.0"}
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
